--- a/assignment2/GRass2_2016.tex
+++ b/assignment2/GRass2_2016.tex
@@ -187,7 +187,7 @@ So now we can evaluate the Christoffel symbols.
 as given.
 
 
- %-----------------------------------------------------------
+\pagebreak %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{(b)} Prove that the Riemann tensor with all indices lowered, $R_{\alpha\beta\gamma\delta}$, contains four nonzero elements, any three of which can be written in terms of the fourth.
@@ -230,7 +230,7 @@ R_{1212}&=\frac{1}{2}\left(g_{12,21}+g_{21,12}-g_{11,22}-g_{22,11}\right)\\
 \end{align}
 which is, in general, non-zero (note that~\ref{R1212}) is symmetric under interchange $u\leftrightarrow v$, as we would expect).
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{(c)} Prove that, in Klein’s geometry, the Ricci tensor satisfies
@@ -373,7 +373,7 @@ R&=g^{\alpha\beta}R_{\alpha\beta}\\
 since $g^{\alpha\beta}g_{\alpha\beta}=g^{\alpha \beta} g_{\beta \alpha}=\delta^{\alpha}_{\ph{\alpha}\alpha}=2$ in Klein's geometry.
 
 
- %-----------------------------------------------------------
+  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{(d)} Answer each of the following questions in one or two sentences.
@@ -383,9 +383,9 @@ since $g^{\alpha\beta}g_{\alpha\beta}=g^{\alpha \beta} g_{\beta \alpha}=\delta^{
 \textbf{i.} In what fundamental way does Klein's geometry differ from a two-sphere?
 \end{framed}
 
-A 2-sphere has positive curvature (the geodesics converge). By contrast, Klein's geometry has negative curvature!
+A 2-sphere has positive curvature (the geodesics converge; also note a triangle on the surface would have the sum of internal angles $>180^{\circ}$ - see Figure \ref{pos curv triangle}). By contrast, Klein's geometry has negative curvature!
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{ii.} The hyperbola $x^2-y^2=1$ is rotated around the $y$-axis to form a three-dimensional hyperboloid of revolution. Does it possess positive or negative curvature? Justify your answer physically with a diagram; do not attempt to calculate anything.
@@ -409,7 +409,7 @@ We see that geodesics travelling along the surface would diverge; hence this hyp
 \label{neg curv triangle}
 \end{figure}
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{iii.} The hyperbola $x^2-y^2=1$ is now rotated around the $x$-axis. What is the sign of the curvature this time? Why?
@@ -432,7 +432,7 @@ We see that geodesics travelling along the surface would converge; hence this hy
 \end{figure}
 
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{iv.} Setting aside their dimensionality, in what fundamental way do the hyperboloids of revolution in parts (d)(ii) and (d)(iii) differ from Klein's geometry? Justify your answer in words; don’t try to calculate anything.
@@ -443,7 +443,7 @@ The hyperboloids differ from Klein's geometry in that geodesics can ``traverse''
 In the hyperboloid in Figure \ref{diii figure}, we note that there are obvious discontinuities. There are no discontinuities in Klein's geometry, which is an infinite plane.
 
 
- %-----------------------------------------------------------
+  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{v.} Identify a spacetime manifold, that resembles Klein's geometry. Don’t worry too much about the precise mathematical meaning of ``resembles'', a qualitative justification is fine.
@@ -451,7 +451,7 @@ In the hyperboloid in Figure \ref{diii figure}, we note that there are obvious d
 
 We can consider anti-de Sitter space to resemble Klein's geometry. We would find that both have negative scalar curvature. The anti-de Sitter space is a maximally symmetric Lorenzian manifold (hence have a different signature metric), but ``locally'' the manifold would resemble Klein's geometry.
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{(e)} Consider the triangle $\Delta$ABC, whose sides are ``straight lines'' (geodesics) joining the points A$(0,0)$, B$(b,0)$, and C$(0,b)$, with $b<1$. It is easy to show (you don't need to!) that the sides AB and AC are just the curves $v=0$ and $u=0$ respectively.
@@ -553,7 +553,7 @@ Thus we conclude that equation of the geodesic joining $B$ and $C$ is
 v=-u+b
 \end{equation}
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{ii.} Prove that the sum of the interior angles of $\Delta$ABC is
@@ -662,7 +662,7 @@ Summing these angles we indeed find
 
 as required.
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{iii.} Triangles in Klein's geometry can have $\sum=0$! Without proof, sketch what such a triangle might look like. Your sketch by necessity will be an incomplete representation; there is no way to draw a Klein triangle faithfully on a flat page.
@@ -679,7 +679,7 @@ A triangle in space with negative curvature will have $\Sigma<180^{\circ}$, as s
 
 If the dotted lines extended to infinity, we would have a triangle with $\Sigma=0^{\circ}$. In flat space, the lines would look somewhat parallel.
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{(f) i.} Write down a closed form expression for the area A of $\Delta$ABC as an integral over a subset of the $(u,v)$ domain.
@@ -713,7 +713,7 @@ A&=\iint \frac{a^4}{(1-u^2-v^2)^3}~\text{d}u~\text{d}v\\
 \end{figure}
 
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{ii.} By changing variables to $y=v+u$ and $z=v-u$, recast your integral in the form
@@ -821,7 +821,7 @@ A&= 2a^2\left[\frac{\pi}{4}-\cos^{-1}\left(\frac{1}{\sqrt{2-b^2}}\right)\right]\
 as required. 
  
  
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{iii.} Explain briefly, in one or two sentences, why~(\ref{A(pi,Sigma)}) guarantees the \emph{nonexistence} of similar triangles in Klein’s geometry.
@@ -833,7 +833,7 @@ A=a^2\left(\frac{\pi}{2}-\Sigma\right)
 \end{equation*}
 tells us that in Klein's geometry, the area of a triangle is linked directly to the sum of its internal angles. Similar triangles possess the same internal angles and hence the same sum of internal angles; however since equation~(\ref{A(pi,Sigma)}) gives only a single value of area for any $\Sigma$, we see that the area is fixed, and hence similar triangles cannot exist in Klein's geometry.
 
- %-----------------------------------------------------------
+\pagebreak  %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{(g)} A vector $\vec{W}$ with equal components $W^1$ and $W^2$ at the point $A(0,0)$ is parallel transported along the geodesic AB. Show that its components, when it reaches the point B$(b,0)$, are in the ratio
@@ -847,13 +847,13 @@ Parallel transport of a vector $\vec{V}$ along a curve $s$ is given by
 U^{\beta}V^{\alpha}_{\ph{\alpha};\beta}=0
 \end{equation}
 
-As $V$ does not change ove the geodesic $AB$, we know $x^{\beta}=u=x^{1}$.
+As $V$ does not change over the geodesic $AB$, we know $x^{\beta}=u=x^{1}$.
 
 We have two geodesic equations for the transport of $\vec{W}$ along $AB$:
 
 \begin{align}
 \frac{\partial W^{1}}{\partial u}+\Gamma^{1}_{\ph{1}11}W^{1}
-+\Gamma^{1}_{ph{1}21}W^2&=0 \label{W1 diff eqn}\\
++\Gamma^{1}_{\ph{1}21}W^2&=0 \label{W1 diff eqn}\\
 \frac{\partial W^{2}}{\partial u}+\Gamma^{2}_{\ph{2}21}W^2&=0
 \end{align}
 
@@ -906,9 +906,10 @@ W^2(0,0)&=w=c_1
 
 Considering the point $(u,v)=(b,0)$ we find
 \begin{align}
-\frac{W^1}{W^2}&=\frac{c_3}{(1-b^2)}{c\sqrt{1-b^2}}\\
-&=\frac{w}{w}\left(1-b^2\right)^{-1/2}\\
-&=\left(1-b^2\right)^{-1/2}
+W^1(b,0)&=w(1-b^2)\\
+W^2(b,0)&=w\sqrt{1-b^2}\\
+\Rightarrow \frac{W^1}{W^2}(b,0)&=\frac{w(1-b^2)}{w\sqrt{1-b^2}}\\
+&=\left(1-b^2\right)^{1/2}
 \end{align}
 
 as required.
